--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@expo/vector-icons": "^13.0.0",
     "@gluestack-style/react": "^0.2.51",
     "@gluestack-ui/themed": "^0.1.53",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/auth": "^18.5.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
